Package_Tools/include-C/gnutls/inarbeit/fertig/openpgp.h

/* Openpgp certificate stuff
 */

/**
 * gnutls_openpgp_crt_fmt_t:
 * @GNUTLS_OPENPGP_FMT_RAW: OpenPGP certificate in raw format.
 * @GNUTLS_OPENPGP_FMT_BASE64: OpenPGP certificate in base64 format.
 *
 * Enumeration of different OpenPGP key formats.
 */
typedef enum gnutls_openpgp_crt_fmt {
	GNUTLS_OPENPGP_FMT_RAW,
	GNUTLS_OPENPGP_FMT_BASE64
} gnutls_openpgp_crt_fmt_t;
/**
 * gnutls_openpgp_recv_key_func:
 * @session: a TLS session
 * @keyfpr: key fingerprint
 * @keyfpr_length: length of key fingerprint
 * @key: output key.
 *
 * A callback of this type is used to retrieve OpenPGP keys.  Only
 * useful on the server, and will only be used if the peer send a key
 * fingerprint instead of a full key.  See also
 * gnutls_openpgp_set_recv_key_function().
 *
 * The variable @key must be allocated using gnutls_malloc().
 *
 * Returns: On success, %GNUTLS_E_SUCCESS (zero) is returned,
 *   otherwise an error code is returned.
 */
typedef int (*gnutls_openpgp_recv_key_func)(gnutls_session_t session,
					    const unsigned char *keyfpr,
					    unsigned int keyfpr_length,
					    gnutls_datum_t *key);
void gnutls_openpgp_set_recv_key_function(gnutls_session_t session,
					  gnutls_openpgp_recv_key_func func)
	/*_GNUTLS_GCC_ATTR_DEPRECATED*/;
/* certificate authentication stuff.
 */
int gnutls_certificate_set_openpgp_key(
	gnutls_certificate_credentials_t res, gnutls_openpgp_crt_t crt,
	gnutls_openpgp_privkey_t pkey) /*_GNUTLS_GCC_ATTR_DEPRECATED*/;
int gnutls_certificate_get_openpgp_key(
	gnutls_certificate_credentials_t res, unsigned index,
	gnutls_openpgp_privkey_t *key) /*_GNUTLS_GCC_ATTR_DEPRECATED*/;
int gnutls_certificate_get_openpgp_crt(
	gnutls_certificate_credentials_t res, unsigned index,
	gnutls_openpgp_crt_t **crt_list,
	unsigned *crt_list_size) /*_GNUTLS_GCC_ATTR_DEPRECATED*/;
int gnutls_certificate_set_openpgp_key_file(
	gnutls_certificate_credentials_t res, const char *certfile,
	const char *keyfile,
	gnutls_openpgp_crt_fmt_t format) /*_GNUTLS_GCC_ATTR_DEPRECATED*/;
int gnutls_certificate_set_openpgp_key_mem(
	gnutls_certificate_credentials_t res, const gnutls_datum_t *cert,
	const gnutls_datum_t *key,
	gnutls_openpgp_crt_fmt_t format) /*_GNUTLS_GCC_ATTR_DEPRECATED*/;
int gnutls_certificate_set_openpgp_key_file2(
	gnutls_certificate_credentials_t res, const char *certfile,
	const char *keyfile, const char *subkey_id,
	gnutls_openpgp_crt_fmt_t format) /*_GNUTLS_GCC_ATTR_DEPRECATED*/;
int gnutls_certificate_set_openpgp_key_mem2(
	gnutls_certificate_credentials_t res, const gnutls_datum_t *cert,
	const gnutls_datum_t *key, const char *subkey_id,
	gnutls_openpgp_crt_fmt_t format) /*_GNUTLS_GCC_ATTR_DEPRECATED*/;
int gnutls_certificate_set_openpgp_keyring_mem(
	gnutls_certificate_credentials_t c, const unsigned char *data,
	size_t dlen,
	gnutls_openpgp_crt_fmt_t format) /*_GNUTLS_GCC_ATTR_DEPRECATED*/;
int gnutls_certificate_set_openpgp_keyring_file(
	gnutls_certificate_credentials_t c, const char *file,
	gnutls_openpgp_crt_fmt_t format) /*_GNUTLS_GCC_ATTR_DEPRECATED*/;