Packages_2024/gnutls_3.8.3/gnutls/openpgp.inc


procedure gnutls_openpgp_set_recv_key_function(session: Tgnutls_session_t; func: Tgnutls_openpgp_recv_key_func); cdecl; external libgnutls; deprecated;
function gnutls_certificate_set_openpgp_key(res: Tgnutls_certificate_credentials_t; crt: Tgnutls_openpgp_crt_t; pkey: Tgnutls_openpgp_privkey_t): longint; cdecl; external libgnutls; deprecated;
function gnutls_certificate_get_openpgp_key(res: Tgnutls_certificate_credentials_t; index: dword; key: Pgnutls_openpgp_privkey_t): longint; cdecl; external libgnutls; deprecated;
function gnutls_certificate_get_openpgp_crt(res: Tgnutls_certificate_credentials_t; index: dword; crt_list: PPgnutls_openpgp_crt_t; crt_list_size: Pdword): longint; cdecl; external libgnutls; deprecated;
function gnutls_certificate_set_openpgp_key_file(res: Tgnutls_certificate_credentials_t; certfile: pchar; keyfile: pchar; format: Tgnutls_openpgp_crt_fmt_t): longint; cdecl; external libgnutls; deprecated;
function gnutls_certificate_set_openpgp_key_mem(res: Tgnutls_certificate_credentials_t; cert: Pgnutls_datum_t; key: Pgnutls_datum_t; format: Tgnutls_openpgp_crt_fmt_t): longint; cdecl; external libgnutls; deprecated;
function gnutls_certificate_set_openpgp_key_file2(res: Tgnutls_certificate_credentials_t; certfile: pchar; keyfile: pchar; subkey_id: pchar; format: Tgnutls_openpgp_crt_fmt_t): longint; cdecl; external libgnutls; deprecated;
function gnutls_certificate_set_openpgp_key_mem2(res: Tgnutls_certificate_credentials_t; cert: Pgnutls_datum_t; key: Pgnutls_datum_t; subkey_id: pchar; format: Tgnutls_openpgp_crt_fmt_t): longint; cdecl; external libgnutls; deprecated;
function gnutls_certificate_set_openpgp_keyring_mem(c: Tgnutls_certificate_credentials_t; data: pbyte; dlen: Tsize_t; format: Tgnutls_openpgp_crt_fmt_t): longint; cdecl; external libgnutls; deprecated;
function gnutls_certificate_set_openpgp_keyring_file(c: Tgnutls_certificate_credentials_t; file_: pchar; format: Tgnutls_openpgp_crt_fmt_t): longint; cdecl; external libgnutls; deprecated;

// === Konventiert am: 9-7-25 13:39:39 ===


{$ENDIF read_interface}


{$IFDEF read_implementation}



{$ENDIF read_implementation}
